# ffmpeg-scripts

./: .gitignore  Cargo.toml  cloud-init-worker.yaml
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: detect-cuts.sh  detect-slide-changes.sh  download-webdav.sh  find-talks.sh  match-audio-transcription.py  match-audio.py  preview.sh  process-videos.py  process-videos.sh  sync-second-room-audio.py  tag-videos.sh  upload-webdav.py
src/: api.rs  hetzner.rs  hetzner_cli.rs  jobs.rs  main.rs  processing.rs  webdav.rs
templates/: index.html
